crates/swc_ecma_parser/tests/errors/label/input.js
"use strict"
a: function b() {}